--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,12 +23,14 @@
     }
   },
   "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts",
-    ".next/dev/types/**/*.ts",
-    "**/*.mts"
-  ],
-  "exclude": ["node_modules", "functions"]
+  "next-env.d.ts",
+  "**/*.ts",
+  "**/*.tsx",
+  ".next/types/**/*.ts"],
+  "exclude": [
+  "node_modules",
+  ".next",
+  "functions/**"
+]
+
 }
