H0: fix CI build by adding turbopack config

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build project (webpack)
-        run: npm run build -- --no-turbo
+      - name: Build project
+        run: npm run build
+
 
