--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,14 @@
-name: CI
-
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    env:
+      NEXT_PUBLIC_FIREBASE_API_KEY: "dummy"
+      NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN: "dummy"
+      NEXT_PUBLIC_FIREBASE_PROJECT_ID: "dummy"
+      NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET: "dummy"
+      NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: "dummy"
+      NEXT_PUBLIC_FIREBASE_APP_ID: "dummy"
 
     steps:
       - name: Checkout repository
@@ -26,5 +24,3 @@ jobs:
 
       - name: Build project
         run: npm run build
-
-
